# Pipeline

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  checks.md  setup.cfg  setup.py  start.bat
RnD/: Hierarchy.vpd
resources/.pipeline/: config.json  project.json
resources/.pipeline/rules/concepts/global/: create.py  delete.py
resources/app_resources/: default_command.py
resources/templates/default/.pipeline/: project_TODO.json
resources/themes/dark/: theme.json
resources/themes/dark/work/: adjust_svg.py  ui_images.ai  wip_theme.py
resources/themes/default/: theme.json
ressources/.pipeline/: config.json
src/pipeline/: __init__.py  commands.py  database.py
src/pipeline/api/: __init__.py  abstract_steps.py  commands.py  concepts.py  concrete_steps.py  elements.py  members.py  project.py  properties.py  scripts.py  theoretical_steps.py
src/pipeline/internal/: command_calls.py  config.py  core.py  database.py  logging.py  manager.py  properties_values.py
src/pipeline/ui/: __init__.py  main_window.py
src/pipeline/ui/internal/: synchronizer.py  themes.py
src/pipeline/ui/panels/: abstract_panel.py  concrete_members_panel.py  design_members_panel.py  design_members_properties_panel.py
src/pipeline/ui/tabs/: abstract_tab.py  design_tab.py  project_tab.py
src/pipeline/ui/widgets/: list_widget.py  list_widget_item.py  tree_widget.py  tree_widget_item.py
tests/: test.py  test_new_api.py  test_ui.py
tests/Nouveau dossier/.pipeline/: project.json
tests/testProject/.pipeline/: project.json
(+10 files in other folders)
