[metadata]
name = pipeline
version = attr: pipeline.VERSION
author = Lenny Blondel
author_email = lennyblondel.dev@gmail.com
description = A package meant to creat custom pipelines.
long_description = file: README.md
license = MIT

[options]
package_dir=
    =src
packages=find:
install_requires =
    python_core

[options.packages.find]
where=src